--- a/src/app/profile/login/login.component.html
+++ b/src/app/profile/login/login.component.html
@@ -4,8 +4,8 @@
     <mat-form-field appearance="fill">
         <mat-label>Username</mat-label>
         <input matInput
-            type="email"
-            formControlName="email"
+            type="text"
+            formControlName="username"
             placeholder="Username">
     </mat-form-field>
     <mat-form-field appearance="fill">
